# liblmbcam

./: .gitignore  Makefile.am  NEWS  README.md  acinclude.m4  clean.sh  configure.ac  configure.in
debian/: changelog  control  liblmbcam-dev.files  liblmbcam1.files  libqlmbcam-dev.files  libqlmbcam1.files  qlmbcam.files
src/: Makefile.am
src/examples/: FilltimeBugCheck.cc  Makefile.am
src/examples/multiview/: DisplayWidget.cc  DisplayWidget.hh  DisplayWidget.icc  Makefile.am  multiview.cc
src/examples/qlmbcam/: Makefile.am  QlmbCamMainWindow.cc  QlmbCamMainWindow.hh  QlmbCamSaveThread.cc  QlmbCamSaveThread.hh  moc_QlmbCamMainWindow.cc  qlmbcam.cc
src/liblmbcam/: AtomicCounter.hh  AtomicCounter.icc  FileCam.cc  FileCam.hh  FileCam.icc  FileCamError.hh  FireCam.cc  FireCam.hh  FireCam.icc  FireCamBus.cc  FireCamBus.hh  FireCamBus.icc  FireCamBusRegistry.cc  FireCamBusRegistry.hh  FireCamError.hh  FireCamParam.cc  FireCamParam.hh  FireCamParam.icc  LMBCam.cc  LMBCam.hh  LMBCam.icc  LMBCamBus.hh  LMBCamBusIndex.cc  LMBCamBusIndex.hh  LMBCamError.hh  LMBCamFileIO.cc  LMBCamFileIO.hh  LMBCamParam.hh  LMBError.hh  LMBErrorHandler.cc  LMBErrorHandler.hh  Makefile.am  MutexLocker.hh  V4LCam.cc  V4LCam.hh  V4LCam.icc  V4LCamBus.cc  V4LCamBus.hh  V4LCamError.hh  V4LCamParam.cc  (+1 more)
src/liblmbcam/etc/: Makefile.am
src/liblmbcam/scripts/: Makefile.am
src/libqlmbcam/: Bayer.cc  Bayer.hh  Converters.cc  Converters.hh  Equalizer.hh  MONO_overexp_RGBConverter.hh  Makefile.am  QlmbCamBusWidget.cc  QlmbCamBusWidget.hh  QlmbCamUpdateThread.cc  QlmbCamUpdateThread.hh  QlmbCamVideoWidget.cc  QlmbCamVideoWidget.hh  QlmbCamWidget.cc  QlmbCamWidget.hh  moc_QlmbCamBusWidget.cc  moc_QlmbCamVideoWidget.cc  moc_QlmbCamWidget.cc
src/libqlmbcam/scripts/: Makefile.am
src/libqlmbcamwid/: Makefile.am  QlmbCamMainWidget.cc  QlmbCamMainWidget.hh  QlmbCamMainWidget.icc  QlmbCamModeControl.cc  QlmbCamModeControl.hh  QlmbCamModeControl.icc  QlmbCamParamControl.cc  QlmbCamParamControl.hh  QlmbCamParamControl.icc  moc_QlmbCamMainWidget.cc  moc_QlmbCamModeControl.cc  moc_QlmbCamParamControl.cc
src/lmbcam_matlab/: FireCamBusML.hh  FireCamBus_cameraByGUID.m  FireCamBus_cameraByIndex.m  FireCamBus_delete.m  FireCamBus_nCameras.m  FireCamBus_new.m  FireCamBus_rescan.m  InputArgs.cc  InputArgs.hh  LMBCamML.hh  LMBCam_availableModes.m  LMBCam_availableParameters.m  LMBCam_framerate.m  LMBCam_getFrame.m  LMBCam_mode.m  LMBCam_mostRecentFrameIndex.m  LMBCam_paramSetValue.m  LMBCam_printActualParameters.m  LMBCam_reset.m  LMBCam_setFramerate.m  LMBCam_setMode.m  LMBCam_setRingBufferSize.m  LMBCam_showLiveWindow.m  LMBCam_startCameraRunContinuous.m  LMBCam_startCameraRunNFrames.m  LMBCam_stopCamera.m  LMBCam_waitForFrameFinished.m  Makefile.am  OutputArgs.hh  README  lmbcam_matlab.cc  test_qt.cc
