ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src

uninstall-local:
	rm -rf $(DESTDIR)$(includedir)/lmbcam

EXTRA_DIST = \
	debian/qlmbcam.dirs \
	debian/compat \
	debian/control \
	debian/copyright \
	debian/dirs \
	debian/docs \
	debian/liblmbcam1.files \
	debian/liblmbcam-dev.files \
	debian/libqlmbcam-dev.files \
	debian/libqlmbcam1.dirs \
	debian/rules \
	debian/liblmbcam1.dirs \
	debian/changelog \
	debian/liblmbcam-dev.dirs \
	debian/libqlmbcam1.files \
	debian/libqlmbcam-dev.dirs \
	debian/qlmbcam.files
